<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_transparrent_slide_type"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="com.literacyall.app.activities.TransparrentSlideTypeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:orientation="horizontal">


        </LinearLayout>


        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight=".4"
                android:orientation="vertical"
                android:background="@color/blueRiver"
                android:weightSum="5">

                <com.literacyall.app.customui.CustomButton
                    android:id="@+id/btnEntryMatch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Match" />


                <com.literacyall.app.customui.CustomButton
                    android:id="@+id/btnEntryAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Answer" />


                <com.literacyall.app.customui.CustomButton
                    android:id="@+id/btnEntryWrite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Write" />

                <com.literacyall.app.customui.CustomButton
                    android:id="@+id/btnEntryRead"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Read" />

                <com.literacyall.app.customui.CustomButton
                    android:id="@+id/btnEntryClassificate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Classificate" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight=".2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight=".4"
                android:orientation="vertical"
                android:background="@color/blueRiver"
                android:weightSum="5">

                <com.literacyall.app.customui.CustomButton
                    android:id="@+id/btnEntryBottomMatch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Match" />


                <com.literacyall.app.customui.CustomButton
                    android:id="@+id/btnEntryBottomAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Answer" />


                <com.literacyall.app.customui.CustomButton
                    android:id="@+id/btnEntryBottomWrite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Write" />

                <com.literacyall.app.customui.CustomButton
                    android:id="@+id/btnEntryBottomRead"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Read" />

                <com.literacyall.app.customui.CustomButton
                    android:id="@+id/btnEntryBottomClassificate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/zero"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Classificate" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
